# lidar-obstacle-detection

./: .gitignore  CMakeLists.txt  README.md
src/: environment.cpp  processPointClouds.cpp  processPointClouds.h
src/pointclouds/: voxel_grid.cpp
src/quiz/cluster/: Makefile  cluster.cpp  cmake_install.cmake  kdtree.h  quizCluster
src/quiz/ransac/: Makefile  cmake_install.cmake  quizRansac  ransac2d.cpp
src/sensors/: lidar.h
